fixed issues in the database system